fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,14 @@ h2 {
 
 h3 {
   color: #fff;
-  font-family: "Quicksand", sans-serif;
-  font-size: 1rem;
+  font-family: "Roboto Mono", monospace;
+  font-size: 2rem;
+}
+
+h4 {
+  color: #fff;
+  font-family: "Work Sans", sans-serif;
+  font-size: 1.3rem;
 }
 
 p {
@@ -47,6 +53,12 @@ a {
   font-style: normal;
   font-family: "Andika", sans-serif;
   font-weight: 400;
+}
+
+button {
+  font-family: "Work Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .link a {
